# serializer version: 1
# name: test_diagnostics[HWE-BAT]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '1.00',
        'id': '**REDACTED**',
        'model_name': 'Plug-In Battery',
        'product_name': 'Plug-In Battery',
        'product_type': 'HWE-BAT',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': None,
        'average_power_15m_w': None,
        'current_a': 1.5,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': 123,
        'energy_export_kwh': 123.456,
        'energy_export_t1_kwh': None,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 123.456,
        'energy_import_t1_kwh': None,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 50.0,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': None,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': None,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': 123.0,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': None,
        'state_of_charge_pct': 50.0,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': 230.0,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 100,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': False,
        'status_led_brightness_pct': 100,
        'uptime_s': 356,
        'wifi_rssi_db': -77,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 100,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-KWH1]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '3.06',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi kWh Meter 1-phase',
        'product_name': 'kWh meter',
        'product_type': 'HWE-KWH1',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': 74.052,
        'average_power_15m_w': None,
        'current_a': 0.273,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': None,
        'energy_export_kwh': 255.551,
        'energy_export_t1_kwh': 255.551,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 2.705,
        'energy_import_t1_kwh': 2.705,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 50.0,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': 0.611,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': -1058.296,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': -1058.296,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': -58.612,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': 228.472,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 92,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 92,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-KWH3]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '3.06',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi kWh Meter 3-phase',
        'product_name': 'KWh meter 3-phase',
        'product_type': 'HWE-KWH3',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': 0.0,
        'apparent_power_l2_va': 3548.879,
        'apparent_power_l3_va': 3563.414,
        'apparent_power_va': 7112.293,
        'average_power_15m_w': None,
        'current_a': 30.999,
        'current_l1_a': 0.0,
        'current_l2_a': 15.521,
        'current_l3_a': 15.477,
        'cycles': None,
        'energy_export_kwh': 0.523,
        'energy_export_t1_kwh': 0.523,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 0.101,
        'energy_import_t1_kwh': 0.101,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 49.926,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': None,
        'power_factor_l1': 1.0,
        'power_factor_l2': 0.999,
        'power_factor_l3': 0.997,
        'power_l1_w': -1058.296,
        'power_l2_w': 158.102,
        'power_l3_w': 0.0,
        'power_w': -900.194,
        'protocol_version': None,
        'reactive_power_l1_var': 0.0,
        'reactive_power_l2_var': -166.675,
        'reactive_power_l3_var': -262.35,
        'reactive_power_var': -429.025,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': 230.751,
        'voltage_l2_v': 228.391,
        'voltage_l3_v': 229.612,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 92,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 92,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-P1]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '4.19',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi P1 Meter',
        'product_name': 'P1 meter',
        'product_type': 'HWE-P1',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': 12.345,
        'any_power_fail_count': 4,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': None,
        'average_power_15m_w': 123.0,
        'current_a': None,
        'current_l1_a': -4.0,
        'current_l2_a': 2.0,
        'current_l3_a': 0.0,
        'cycles': None,
        'energy_export_kwh': 13086.777,
        'energy_export_t1_kwh': 4321.333,
        'energy_export_t2_kwh': 8765.444,
        'energy_export_t3_kwh': 8765.444,
        'energy_export_t4_kwh': 8765.444,
        'energy_import_kwh': 13779.338,
        'energy_import_t1_kwh': 10830.511,
        'energy_import_t2_kwh': 2948.827,
        'energy_import_t3_kwh': 2948.827,
        'energy_import_t4_kwh': 2948.827,
        'external_devices': dict({
          'gas_meter_G001': dict({
            'timestamp': '2023-01-25T22:09:57',
            'type': 'gas_meter',
            'unique_id': '**REDACTED**',
            'unit': 'm3',
            'value': 111.111,
          }),
          'heat_meter_H001': dict({
            'timestamp': '2023-01-25T22:09:57',
            'type': 'heat_meter',
            'unique_id': '**REDACTED**',
            'unit': 'GJ',
            'value': 444.444,
          }),
          'inlet_heat_meter_IH001': dict({
            'timestamp': '2023-01-25T22:09:57',
            'type': 'inlet_heat_meter',
            'unique_id': '**REDACTED**',
            'unit': 'm3',
            'value': 555.555,
          }),
          'warm_water_meter_WW001': dict({
            'timestamp': '2023-01-25T22:09:57',
            'type': 'warm_water_meter',
            'unique_id': '**REDACTED**',
            'unit': 'm3',
            'value': 333.333,
          }),
          'water_meter_W001': dict({
            'timestamp': '2023-01-25T22:09:57',
            'type': 'water_meter',
            'unique_id': '**REDACTED**',
            'unit': 'm3',
            'value': 222.222,
          }),
        }),
        'frequency_hz': 50.0,
        'long_power_fail_count': 5,
        'meter_model': 'ISKRA  2M550T-101',
        'monthly_power_peak_timestamp': '2023-01-01T08:00:10',
        'monthly_power_peak_w': 1111.0,
        'power_factor': None,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': -123.0,
        'power_l2_w': 456.0,
        'power_l3_w': 123.456,
        'power_w': -123.0,
        'protocol_version': 50,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': None,
        'state_of_charge_pct': None,
        'tariff': 2,
        'timestamp': None,
        'total_liter_m3': 1234.567,
        'unique_id': '**REDACTED**',
        'voltage_l1_v': 230.111,
        'voltage_l2_v': 230.222,
        'voltage_l3_v': 230.333,
        'voltage_sag_l1_count': 1,
        'voltage_sag_l2_count': 2,
        'voltage_sag_l3_count': 3,
        'voltage_swell_l1_count': 4,
        'voltage_swell_l2_count': 5,
        'voltage_swell_l3_count': 6,
        'voltage_v': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 100,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 100,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-SKT-11]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '3.03',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi Energy Socket',
        'product_name': 'Energy Socket',
        'product_type': 'HWE-SKT',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': None,
        'average_power_15m_w': None,
        'current_a': None,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': None,
        'energy_export_kwh': 0.0,
        'energy_export_t1_kwh': 0.0,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 63.651,
        'energy_import_t1_kwh': 63.651,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': None,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': None,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': 1457.277,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': 1457.277,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': None,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 94,
      }),
      'state': dict({
        'brightness': 255,
        'power_on': True,
        'switch_lock': False,
      }),
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': 100.0,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 94,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-SKT-21]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '4.07',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi Energy Socket',
        'product_name': 'Energy Socket',
        'product_type': 'HWE-SKT',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': 666.768,
        'average_power_15m_w': None,
        'current_a': 2.346,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': None,
        'energy_export_kwh': 85.951,
        'energy_export_t1_kwh': 85.951,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 30.511,
        'energy_import_t1_kwh': 30.511,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 50.005,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': 0.81688,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': 543.312,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': 543.312,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': 123.456,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': 231.539,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 100,
      }),
      'state': dict({
        'brightness': 255,
        'power_on': True,
        'switch_lock': False,
      }),
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': 100.0,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 100,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[HWE-WTR]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '2.03',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi Watermeter',
        'product_name': 'Watermeter',
        'product_type': 'HWE-WTR',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': 0.0,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': None,
        'average_power_15m_w': None,
        'current_a': None,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': None,
        'energy_export_kwh': None,
        'energy_export_t1_kwh': None,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': None,
        'energy_import_t1_kwh': None,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': None,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': None,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': None,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': None,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': None,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': 17.014,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 84,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 84,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[SDM230]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '3.06',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi kWh Meter 1-phase',
        'product_name': 'kWh meter',
        'product_type': 'SDM230-wifi',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': None,
        'apparent_power_l2_va': None,
        'apparent_power_l3_va': None,
        'apparent_power_va': 74.052,
        'average_power_15m_w': None,
        'current_a': 0.273,
        'current_l1_a': None,
        'current_l2_a': None,
        'current_l3_a': None,
        'cycles': None,
        'energy_export_kwh': 255.551,
        'energy_export_t1_kwh': 255.551,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 2.705,
        'energy_import_t1_kwh': 2.705,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 50.0,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': 0.611,
        'power_factor_l1': None,
        'power_factor_l2': None,
        'power_factor_l3': None,
        'power_l1_w': -1058.296,
        'power_l2_w': None,
        'power_l3_w': None,
        'power_w': -1058.296,
        'protocol_version': None,
        'reactive_power_l1_var': None,
        'reactive_power_l2_var': None,
        'reactive_power_l3_var': None,
        'reactive_power_var': -58.612,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': None,
        'voltage_l2_v': None,
        'voltage_l3_v': None,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': 228.472,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 92,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 92,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[SDM630]
  dict({
    'data': dict({
      'device': dict({
        'api_version': '1.0.0',
        'firmware_version': '3.06',
        'id': '**REDACTED**',
        'model_name': 'Wi-Fi kWh Meter 3-phase',
        'product_name': 'KWh meter 3-phase',
        'product_type': 'SDM630-wifi',
        'serial': '**REDACTED**',
      }),
      'measurement': dict({
        'active_liter_lpm': None,
        'any_power_fail_count': None,
        'apparent_power_l1_va': 0.0,
        'apparent_power_l2_va': 3548.879,
        'apparent_power_l3_va': 3563.414,
        'apparent_power_va': 7112.293,
        'average_power_15m_w': None,
        'current_a': 30.999,
        'current_l1_a': 0.0,
        'current_l2_a': 15.521,
        'current_l3_a': 15.477,
        'cycles': None,
        'energy_export_kwh': 0.523,
        'energy_export_t1_kwh': 0.523,
        'energy_export_t2_kwh': None,
        'energy_export_t3_kwh': None,
        'energy_export_t4_kwh': None,
        'energy_import_kwh': 0.101,
        'energy_import_t1_kwh': 0.101,
        'energy_import_t2_kwh': None,
        'energy_import_t3_kwh': None,
        'energy_import_t4_kwh': None,
        'external_devices': None,
        'frequency_hz': 49.926,
        'long_power_fail_count': None,
        'meter_model': None,
        'monthly_power_peak_timestamp': None,
        'monthly_power_peak_w': None,
        'power_factor': None,
        'power_factor_l1': 1.0,
        'power_factor_l2': 0.999,
        'power_factor_l3': 0.997,
        'power_l1_w': -1058.296,
        'power_l2_w': 158.102,
        'power_l3_w': 0.0,
        'power_w': -900.194,
        'protocol_version': None,
        'reactive_power_l1_var': 0.0,
        'reactive_power_l2_var': -166.675,
        'reactive_power_l3_var': -262.35,
        'reactive_power_var': -429.025,
        'state_of_charge_pct': None,
        'tariff': None,
        'timestamp': None,
        'total_liter_m3': None,
        'unique_id': None,
        'voltage_l1_v': 230.751,
        'voltage_l2_v': 228.391,
        'voltage_l3_v': 229.612,
        'voltage_sag_l1_count': None,
        'voltage_sag_l2_count': None,
        'voltage_sag_l3_count': None,
        'voltage_swell_l1_count': None,
        'voltage_swell_l2_count': None,
        'voltage_swell_l3_count': None,
        'voltage_v': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength': 92,
      }),
      'state': None,
      'system': dict({
        'api_v1_enabled': None,
        'cloud_enabled': True,
        'status_led_brightness_pct': None,
        'uptime_s': None,
        'wifi_rssi_db': None,
        'wifi_ssid': '**REDACTED**',
        'wifi_strength_pct': 92,
      }),
    }),
    'entry': dict({
      'ip_address': '**REDACTED**',
      'product_name': 'P1 Meter',
      'product_type': 'HWE-P1',
      'serial': '**REDACTED**',
    }),
  })
# ---
